last commit before project is frozen